--- a/src/components/Hero/Hero.css
+++ b/src/components/Hero/Hero.css
@@ -18,3 +18,13 @@
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+.cover-text {
+    font-family: 'Poppins', sans-serif;
+  font-size: 30px;
+  font-weight: 300;
+  position: absolute;
+  top: 80%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
